--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ h1 {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding-top: 100px;
+  padding-top: 80px;
   width: 400px;
 }
 
@@ -55,4 +55,8 @@ h1 {
   color: #005EFF;
   font-size: 20px;
   font-style: italic;
+}
+
+.guesses_left {
+  padding-top: 10px;
 }
